# africa-ai-intelligence-crew

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  report.md
src/ai_news_across_africa/: crew.py  main.py
src/ai_news_across_africa/config/: agents.yaml  tasks.yaml
src/ai_news_across_africa/tools/: sendgrid_tool.py
src/latest_news_reports_per_country/: crew.py  main.py
