[project]
name = "latest_news_reports_per_country"
version = "0.1.0"
description = "latest-news-reports-per-country using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.1",
]

[project.scripts]
latest_news_reports_per_country = "latest_news_reports_per_country.main:run"
run_crew = "latest_news_reports_per_country.main:run"
train = "latest_news_reports_per_country.main:train"
replay = "latest_news_reports_per_country.main:replay"
test = "latest_news_reports_per_country.main:test"
run_with_trigger = "latest_news_reports_per_country.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
